feat(miranium): rename to miranium.

--- a/src/Miranium.Blockchain/Miranium.Blockchain.csproj
+++ b/src/Miranium.Blockchain/Miranium.Blockchain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Miranium.Wallet\Miranium.Wallet.csproj" />
+    </ItemGroup>
+
 </Project>
