--- a/tests/Miranium.Test.Blockchain/Miranium.Test.Blockchain.csproj
+++ b/tests/Miranium.Test.Blockchain/Miranium.Test.Blockchain.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <RootNamespace>MiraCash.Test.Blockchain</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\MiraCash.Blockchain\MiraCash.Blockchain.csproj" />
+      <ProjectReference Include="..\..\src\Miranium.Blockchain\Miranium.Blockchain.csproj" />
     </ItemGroup>
 
 </Project>
